--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "django<5.0.0",
+]
 
 [dependency-groups]
 dev = [
     "black>=25.1.0",
-    "streamlit>=1.49.1",
 ]
