--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,14 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "django<5",
+    "django-admin-thumbnails<0.3",
+    "pillow<10",
+]
 
 [dependency-groups]
 dev = [
     "black>=25.1.0",
+    "django-schema-viewer>=0.5.3",
 ]
