Feat: Add django v1.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,19 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Logs
+logs/
+
+# Environments
+.env*
+!.env.template
+
+# Production Environment
+backend/staticfiles/
+
+# Database
+infra/db/db.sqlite3
+
+# IDEA(Pycharm)
+.idea/
