Feat: Add django v1.1.0

--- a/.env.template
+++ b/.env.template
@@ -15,12 +15,20 @@ LOGGING_LEVEL=INFO
 LOGGING_FORMATTER=json
 
 # Database Setting
-DB_ENGINE=django_prometheus.db.backends.sqlite3
-DB_NAME=db.sqlite3
-DB_USER=
+DB_ENGINE=django.db.backends.oracle
+DB_NAME=oracle-db:1521/XEPDB1
+DB_USER=django_db
+# DB_PASSWORD만 추가 설정(cx_Oracle 때문)
 DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+# DB_HOST=
+# DB_PORT=
+
+# Oracle
+ORACLE_PASSWORD=
+ORACLE_CHARACTERSET=AL32UTF8
+APP_USER=django_db
+# DB_PASSWORD와 일치
+APP_USER_PASSWORD=
 
 # GUNICORN Setting
 GUNICORN_PROC_NAME=django_gunicorn
