--- a/infra/prometheus/prometheus.yml
+++ b/infra/prometheus/prometheus.yml
@@ -10,6 +10,10 @@ scrape_configs:
   - job_name: "django"
     static_configs:
       - targets: [ "web:8000" ]
-  - job_name: 'cadvisor'
+  - job_name: "cadvisor"
     static_configs:
-      - targets: [ 'cadvisor:8080' ]
+      - targets: [ "cadvisor:8080" ]
+  - job_name: "oracle-exporter"
+    static_configs:
+      - targets: [ "oracle-exporter:9161"]
+
