--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "cx-oracle>=8.3.0",
     "django<5",
     "django-environ>=0.12.0",
     "django-prometheus>=2.4.1",
